--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@react-email/components": "^0.0.28",
     "motion": "^11.11.17",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-type-animation": "^3.2.0",
     "resend": "^4.0.1"
   },
