--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "dotenv -e .env.local next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@react-email/components": "^0.0.28",
+    "dotenv": "^16.4.5",
     "motion": "^11.11.17",
     "next": "15.0.3",
     "react": "^18.3.1",
